Changes for 3.2.8rc1

New features:
........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)

Bug fixes:
..F....... [ZBX-12439] fixed macro name field length in host configuration form (gcalenko)
...G...PS. [ZBX-10820] fixed potential loss of data when server/proxy processes zabbix_sender data (Andris)
........S. [ZBX-12446] fixed discovery and auto registration to accept empty DNS names (vso)
........S. [ZBX-12295] fixed possible accumulation of executed tasks in database (Sergejs)
........S. [ZBX-12318] fixed maintenance status not being updated in cache if host is disabled (vso)
.......PS. [ZBX-12224] fixed connection to Oracle database when database server gives out warnings (gleb)
...G...PS. [ZBX-12195] fixed contamination of script output with Zabbix'es own log messages when logging level is set to 4 or 5 and LogType=console (gleb)
...G...... [ZBX-12270] fixed processing of AIX item 'system.stat[ent]' in agent; thanks to Marc for patch (Andris)
..F....... [ZBX-12277] fixed trigger expression test form incorrectly replacing macros (Ivo)

--------------------------------------------------------------------------------
Changes for 3.2.7

3.2.7rc2 was released as 3.2.7 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.7rc2

New features:
A.F....... [ZBX-1357] updated Catalan, Chinese (China), English (United States), Japanese, Korean, Polish, Portuguese (Brazil), Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-12252] fixed history page to display values in chronological order (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.7rc1

Bug fixes:
........S. [ZBX-12349] fixed security vulnerability with execution of the remote commands on server; thanks to MATSUDA Daiki, Ron Waisberg for report (vso)